# llm_learning

./: .env.example  .gitignore  README.md  pyproject.toml
.kilo/plans/: 1776125367337-crisp-planet.md
01_local_llm_api_tokenization/: cloud_apis.ipynb  local_inference.ipynb  tokenization.ipynb
02_gradio/: chat_interfaces.ipynb  interactive_demos.ipynb  ui_prototyping.ipynb
03_rag/: embeddings.ipynb  knowledge_retrieval.ipynb  vector_databases.ipynb
04_fine_tuning/: dataset_prep.ipynb  evaluation.ipynb  peft_lora.ipynb
05_agents/: autonomous_loops.ipynb  function_calling.ipynb  multi_agent_systems.ipynb
